[gd_scene load_steps=13 format=3 uid="uid://ccldumoegdd5r"]

[ext_resource type="Texture2D" uid="uid://bw4fwwn647eii" path="res://sprites/tictactoegrid.png" id="1_you7v"]
[ext_resource type="Texture2D" uid="uid://if1pnj4h0heg" path="res://sprites/win_state.png" id="2_4e2we"]
[ext_resource type="Script" path="res://CellManager.gd" id="2_roqax"]
[ext_resource type="PackedScene" uid="uid://d1dxfsq7bwwdw" path="res://cell.tscn" id="2_s1sg2"]
[ext_resource type="Texture2D" uid="uid://dbdd5oo0emvgf" path="res://winstates/winstate1.png" id="3_74uk5"]
[ext_resource type="Texture2D" uid="uid://crpoe21a8tee6" path="res://winstates/winstate2.png" id="4_0cpm7"]
[ext_resource type="Texture2D" uid="uid://dmkvv4ktms1sn" path="res://winstates/winstate3.png" id="5_qu1e8"]
[ext_resource type="Texture2D" uid="uid://c4bi1qqd358ye" path="res://winstates/winstate4.png" id="6_mylkg"]
[ext_resource type="Texture2D" uid="uid://c001i0e4illfg" path="res://winstates/winstate5.png" id="7_35nw5"]
[ext_resource type="Texture2D" uid="uid://cahpxa0svb8ea" path="res://winstates/winstate6.png" id="8_gakqm"]
[ext_resource type="Texture2D" uid="uid://d4dg0bahvkxb6" path="res://winstates/winstate7.png" id="9_b4mm2"]
[ext_resource type="Texture2D" uid="uid://c35uty87a55nt" path="res://winstates/winstate8.png" id="10_msrwa"]

[node name="Game" type="Node2D"]

[node name="Tictactoegrid" type="Sprite2D" parent="."]
position = Vector2(580, 320)
scale = Vector2(10, 10)
texture = ExtResource("1_you7v")

[node name="OverText" type="Sprite2D" parent="."]
visible = false
position = Vector2(583, 96)
scale = Vector2(10, 10)
texture = ExtResource("2_4e2we")

[node name="CellManager" type="Node2D" parent="."]
script = ExtResource("2_roqax")
winstates = Array[Texture2D]([ExtResource("3_74uk5"), ExtResource("4_0cpm7"), ExtResource("5_qu1e8"), ExtResource("6_mylkg"), ExtResource("7_35nw5"), ExtResource("8_gakqm"), ExtResource("9_b4mm2"), ExtResource("10_msrwa")])

[node name="Cell1" parent="CellManager" instance=ExtResource("2_s1sg2")]
position = Vector2(474, 214)

[node name="Cell2" parent="CellManager" instance=ExtResource("2_s1sg2")]
position = Vector2(580, 213)

[node name="Cell3" parent="CellManager" instance=ExtResource("2_s1sg2")]
position = Vector2(686, 214)

[node name="Cell4" parent="CellManager" instance=ExtResource("2_s1sg2")]
position = Vector2(473, 320)

[node name="Cell5" parent="CellManager" instance=ExtResource("2_s1sg2")]
position = Vector2(580, 320)

[node name="Cell6" parent="CellManager" instance=ExtResource("2_s1sg2")]
position = Vector2(687, 320)

[node name="Cell7" parent="CellManager" instance=ExtResource("2_s1sg2")]
position = Vector2(473, 427)

[node name="Cell8" parent="CellManager" instance=ExtResource("2_s1sg2")]
position = Vector2(580, 427)

[node name="Cell9" parent="CellManager" instance=ExtResource("2_s1sg2")]
position = Vector2(686, 426)
